--- a/manifest.json
+++ b/manifest.json
@@ -6,5 +6,13 @@
     "action": {
       "default_popup": "hello.html",
       "default_icon": "hello_extensions.png"
-    }
+    },
+    "content_scripts": [
+        {
+            "js": ["scripts/content.js"],
+            "matches": [
+                "https://developer.chrome.com/docs/extensions/develop/concepts/content-scripts"
+            ]
+        }
+    ]
 }
