--- a/manifest.json
+++ b/manifest.json
@@ -15,6 +15,10 @@
       "128": "icons/icon128.png"
     }
   },
+  "web_accessible_resources": [{
+    "reasours":["assets/disco.mp3"]
+  }
+	],
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
