--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Disco Break",
   "description": "A Chrome extension to inject disco vibes into your work day.",
   "version": "1.0",
-  "permissions": ["activeTab", "storage"],
+  "permissions": ["activeTab", "storage", "audioCaputre"],
   "background": {
     "service_worker": "background.js"
   },
@@ -15,10 +15,7 @@
       "128": "icons/icon128.png"
     }
   },
-  "web_accessible_resources": [{
-    "reasours":["assets/disco.mp3"]
-  }
-	],
+
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
