--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,31 @@
 {
-  "manifest_version": 3,
-  "name": "Disco Break",
-  "description": "A Chrome extension to inject disco vibes into your work day.",
-  "version": "1.0",
-  "permissions": ["activeTab", "storage", "audioCaputre"],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
+    "manifest_version": 3,
+    "name": "Disco Break",
+    "description": "A Chrome extension to inject disco vibes into your work day.",
+    "version": "1.0",
+    "permissions": ["activeTab", "storage", "audioCaputre"],
+    "background": {
+      "service_worker": "background.js"
+    },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["scripts/content.js"]
+        }
+    ],
+    "action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+      }
+    },
+  
+    "icons": {
       "16": "icons/icon16.png",
       "48": "icons/icon48.png",
       "128": "icons/icon128.png"
     }
-  },
-
-  "icons": {
-    "16": "icons/icon16.png",
-    "48": "icons/icon48.png",
-    "128": "icons/icon128.png"
   }
-}
+  
