--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,12 @@
     "background": {
       "service_worker": "background.js"
     },
+    "web_accessible_resources": [
+        {
+            "matches": ["<all_urls>"],
+            "resources": ["icons/icon128.png"]
+        }
+    ],
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
