--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["scripts/content.js"]
+            "js": ["scripts/content.js"],
+            "css": ["client.css"]
         }
     ],
     "action": {
